--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -18,7 +18,7 @@
   }
   
   .search-label {
-    font-size: 1.25rem;
+    font-size: 1.5rem;
     font-weight: 600;
     color: rgb(39, 124, 127);
     padding-bottom: 5px;
@@ -30,12 +30,12 @@
     border-color: lightgrey;
     border-width: thin;
     padding: 0 15px;
-    font-size: 1.25rem;
+    font-size: 1.5rem;
     color: rgb(44, 129, 132);
   }
   
   .search-button {
-    padding: 13px 22px;
+    padding: 13px;
   }
   
   .search-history-container {
@@ -50,12 +50,12 @@
     line-height: 45px;
     padding: 0 15px;
     color: rgb(139, 53, 53);
-    font-size: 1.25rem;
+    font-size: 1.5rem;
   }
   
   #clear-history-button {
     width: 100%;
-    font-size: 1.25rem;
+    font-size: 1.5rem;
     padding: 10px;
   }
   
@@ -92,7 +92,7 @@
   .current-humidity,
   .current-wind-speed {
     margin: 20px;
-    font-size: 1.25rem;
+    font-size: 2rem;
     text-align: center;
   }
 
@@ -101,13 +101,13 @@
   }
   
   .current-uv-index {
-    font-size: 1.25rem;
+    font-size: 2rem;
     display: inline-flex;
     margin: 0 0 0 20px;
   }
   
   .current-number {
-    font-size: 1.25rem;
+    font-size: 2rem;
     display: inline-flex;
     color: white;
     padding: 5px 10px;
@@ -158,7 +158,7 @@
   }
   
   .future-date {
-    font-size: 1.25rem;
+    font-size: 2.5rem;
     font-weight: 500;
     color: rgb(121, 104, 32);
     text-align: center;
@@ -167,14 +167,14 @@
   .future-icon {
     width: 80px;
     height: auto;
-    margin: 10px 0;
+    margin: 3px 0;
   }
   
   .future-temp,
   .future-humidity,
   .future-wind,
   .future-uv {
-    font-size: 1.25rem;
+    font-size: 2rem;
     font-weight: 400;
     color: rgb(56, 52, 33);
   }
